--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <apache.commons.version>3.4</apache.commons.version>
         <groovy.version>2.4.4</groovy.version>
         <spock.version>1.0-groovy-2.4</spock.version>
         <cglib.version>3.1</cglib.version>
@@ -17,6 +18,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache.commons.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
@@ -102,7 +108,4 @@
             </build>
         </profile>
     </profiles>
-
-
-
 </project>
