--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <objenesis.version>2.2</objenesis.version>
         <makeiteasy.version>4.0.0</makeiteasy.version>
         <spring.framework.version>4.2.1.RELEASE</spring.framework.version>
+        <javafx.plugin.version>8.1.4</javafx.plugin.version>
     </properties>
 
     <dependencies>
@@ -59,6 +60,11 @@
             <version>${makeiteasy.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.zenjava</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>${javafx.plugin.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -89,6 +95,21 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>gui</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.zenjava</groupId>
+                        <artifactId>javafx-maven-plugin</artifactId>
+                        <version>${javafx.plugin.version}</version>
+                        <configuration>
+                            <mainClass>gui.KLabGui</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>console</id>
             <build>
