--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,26 @@
         <makeiteasy.version>4.0.0</makeiteasy.version>
         <spring.framework.version>4.2.1.RELEASE</spring.framework.version>
         <javafx.plugin.version>8.1.4</javafx.plugin.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -60,11 +77,6 @@
             <version>${makeiteasy.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.zenjava</groupId>
-            <artifactId>javafx-maven-plugin</artifactId>
-            <version>${javafx.plugin.version}</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -104,11 +116,18 @@
                         <artifactId>javafx-maven-plugin</artifactId>
                         <version>${javafx.plugin.version}</version>
                         <configuration>
-                            <mainClass>gui.KLabGui</mainClass>
+                            <mainClass>gui.App</mainClass>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
+            <dependencies>
+                <dependency>
+                    <groupId>com.zenjava</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>${javafx.plugin.version}</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>console</id>
